# le-projet-de-vie-web-site

./: .env.example  .gitignore  README.md  flake.nix  lint.sh  test.sh
backend/: db.sqlite3  pyproject.toml
backend/adventure/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
backend/adventure/management/commands/: seed.py
backend/adventure/migrations/: 0001_initial.py  0002_activity_logo_activity_video_file_document_file_and_more.py
backend/adventure/static/adventure/css/: style.css
backend/adventure/static/adventure/js/: main.js  ui.js
backend/adventure/templates/adventure/: activity_detail.html  activity_list.html  admin.html  base.html  dashboard.html  dossier.html  home.html  index.html  profile.html  register.html
backend/adventure/templates/registration/: login.html
backend/alembic/: env.py
backend/alembic/versions/: 6a0a78f411cb_add_logo_url_to_activity.py  ac1c81fd8e25_initial_migration_with_themes_update.py  c1b7bde773e1_add_étudiant_level.py
backend/core/: settings.py  urls.py
backend/src/: auth.py  config.py  database.py  main.py  models.py  monprojetdevie.db  schemas.py  seed.py
backend/src/aventure_orientation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/le_projet_de_vie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/mon_projet_de_vie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/tests/: test_main.py
docs/: design.md  feedback.md  implementation.md  nixos.md  presentation.md  production.md
frontend/: admin.html  adventure.html  index.html  landing.html
frontend/css/: style.css
frontend/js/: admin.js  main.js
nix/: nixos-module.nix  package.nix
