[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mon-projet-de-vie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18",
    "django>=6.0.3",
    "django-stubs>=6.0.2",
    "fastapi>=0.128",
    "httpx>=0.28.1",
    "mypy>=1.20.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-django>=4.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "ruff>=0.15.6",
    "sqlalchemy>=2.0.48",
    "types-python-jose>=3.5.0.20260402",
    "uvicorn>=0.40",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
exclude = ["src/.*"]

[tool.django-stubs]
django_settings_module = "core.settings"


[tool.ruff]
exclude = ["src"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_tests.py", "tests.py"]

