[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mon-projet-de-vie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "django-stubs>=6.0.2",
    "gunicorn>=21.2.0",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "ruff>=0.15.6",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
exclude = ["src/.*"]

[tool.django-stubs]
django_settings_module = "core.settings"


[tool.ruff]
exclude = ["src"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_tests.py", "tests.py"]

