[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "le-projet-de-vie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.12",
    "django-stubs>=5.2.9",
    "gunicorn>=21.2.0",
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.15.6",
    "whitenoise>=6.6.0",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
exclude = ["src/.*"]

[tool.django-stubs]
django_settings_module = "core.settings"


[tool.ruff]
exclude = ["src"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_tests.py", "tests.py"]

